tests/fail/d008_main_with_param.dew
# D008: main must take no parameters
def main = fn (x: Int) {
    x
}
